# debian-upgrade

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  context.md
backend-cli/: Cargo.toml  README.md
backend-cli/src/: main.rs
buildtest/: README.md  run-dry-run-demo.sh  run-gui.sh  test-offline-arm.sh  test-offline-two-phase-dryrun.sh
docs/: architecture.md  offline-upgrade-current.md  roadmap.md
frontend-gui/: Cargo.toml  README.md  build.rs
frontend-gui/src/: main.rs
frontend-gui/ui/: app.slint
packaging/assets/desktop/: debian-upgrade.desktop
packaging/assets/systemd/: debian-upgrade-notify.service  debian-upgrade-notify.timer  debian-upgrade-offline.service  debian-upgrade-post-notify.path  debian-upgrade-post-notify.service
packaging/pacstall/: debian-upgrade-deb.pacscript  debian-upgrade.pacscript
upgrade-core/: Cargo.toml
upgrade-core/src/: lib.rs
