[package]
name = "backend-cli"
version = "1.3.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "debian-upgrade-backend"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
upgrade-core = { path = "../upgrade-core" }
