[package]
name = "frontend-gui"
version = "2.1.2"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "debian-upgrade"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
slint = { version = "=1.5.1", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-femtovg", "renderer-software"] }
serde.workspace = true
serde_json.workspace = true
upgrade-core = { path = "../upgrade-core" }

[build-dependencies]
slint-build = "=1.5.1"
