[package]
name = "upgrade-core"
version = "2.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
